[workspace]
resolver = "2"
members = [".", "sys"]

[workspace.package]
version = "0.1.0"
authors = ["James Cape <jamescape777@gmail.com"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jcape/rexegy"
rust-version = "1.84.1"

[package]
name = "rexegy"
version.workspace = true
authors.workspace = true
description = "Unofficial Exegy XCAPI in Rust"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ref-cast = "1.0"
rexegy-sys = { path = "./sys", version = "0.1.0" }
