[workspace]
resolver = "2"
members = [".", "sys"]

[workspace.package]
version = "0.0.1"
authors = ["James Cape <jamescape777@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jcape/rxegy"
rust-version = "1.85.0"

[package]
name = "rxegy"
version.workspace = true
authors.workspace = true
description = "Unofficial Exegy XCAPI in Rust"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
displaydoc = "0.2.1"
ref-cast = "1.0"
rxegy-sys = { path = "./sys", version = "0.0.1" }

[profile.release]
lto = true

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"
pre-release-replacements = [
    {file="README.md", search="rexegy[a-z-]+/[0-9.]+", replace="{{crate_name}}/{{version}}"},
]