[package]
name = "rxegy-sys"
version.workspace = true
authors.workspace = true
description = "Unofficial Exegy XCAPI FFI for Rust"
edition.workspace = true
keywords = ["ffi"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
links = "xcapi64"

[build-dependencies]
bindgen = "0.71.1"
cargo-emit = "0.2.1"
