[package]
name = "rxegy-sys"
version = "0.1.0"
authors.workspace = true
description = "Unofficial Exegy XCAPI FFI for Rust"
edition.workspace = true
keywords = ["ffi"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
links = "xcapi64"

[build-dependencies]
anyhow = "1.0.97"
bindgen = "0.71.1"
cargo-emit = "0.2.1"
